[package]
name = "bred-api"
version = "3.0.0"
edition = "2021"

[dependencies]
actix = "0.13.0"
actix-cors = "0.6.4"
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
attohttpc = { version = "0.25.0", features = ["json"] }
fred-rs = "0.1.1"
paris = { version = "1.5.15", features = ["macros", "timestamps", "no_logger"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
toml = "0.7.5"
